# sample-cmake

./: CMakeLists.txt  README.md  complie-with-sh.sh  import.h  main.cpp
include/: import.h
sample_bin/: sample_bin.cpp
sample_lib/: sample_library.cpp
